--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     </head>
     <body class="container">
         <div id="container"></div>
+        <!-- <script src ="src/app.js"></script> -->
         <script type="text/javascript" src="src/helper.js"></script>
         <script type="text/javascript" src="src/request.js"></script>
         <script type="text/javascript">
